# mantis_sim

./: README.md  mantis_dev.repos
mantis_base/: CMakeLists.txt  package.xml
mantis_base/cfg/: Parameters.cfg
mantis_base/config/: base.yaml
mantis_base/include/mantis_base/: mantis_hw_interface.h  pid.h
mantis_base/launch/: controllers.launch  mantis.launch
mantis_base/scripts/base_controller/lib/base_controller/: base_controller.h
mantis_base/scripts/base_controller/lib/encoder/: encoder_medit.cpp  encoder_medit.h
mantis_base/scripts/base_controller/lib/motor_controller_interface/: motor_controller_interface.h
mantis_base/scripts/base_controller/lib/motor_controllers/adafruit_feather_wing/: adafruit_feather_wing.cpp  adafruit_feather_wing.h
mantis_base/scripts/base_controller/lib/pid/: pid.cpp  pid.h
mantis_base/scripts/base_controller/lib/ros_lib/medit_msgs/: AngularVelocities.h  AngularVelocitiesStamped.h  Encoders.h  EncodersStamped.h  PID.h  PIDStamped.h  WheelsCmd.h  WheelsCmdStamped.h
mantis_base/scripts/base_controller/src/: main.cpp
mantis_base/scripts/base_controller/test/adafruit_motorshieldv2/: test_adafruit_motorshieldv2.cpp
mantis_base/scripts/base_controller/test/encoders/: test_encoders.cpp
mantis_base/scripts/base_controller/test/motor_controller/: test_adafruit_motor_controller.cpp
mantis_base/scripts/encoders/encoders/: encoders.ino
mantis_base/scripts/encoders/encoders-bno/: encoders-bno.ino
mantis_base/scripts/encoders/encoders_test/: encoders_test.ino
mantis_base/src/: mantis_base.cpp  mantis_hw_interface.cpp  pid.cpp
mantis_bringup/: CMakeLists.txt  package.xml
mantis_bringup/launch/: bringup.launch  bringup_with_laser.launch  keyboard_teleop.launch  minimal.launch  rpicamera.launch  view_mantis.launch
mantis_bringup/rviz/: mantis_bringup.rviz
mantis_control/: CMakeLists.txt  package.xml
mantis_control/config/: mantis_control.yaml  pid.yaml
mantis_control/launch/: mantis.launch  mantis_control.launch  mantis_rviz.launch
mantis_control/rviz/: mantis.rviz
mantis_control/script/: turtlebot3_teleop_key
mantis_description/: CMakeLists.txt  package.xml
mantis_description/launch/: view_mantis.launch
mantis_description/urdf/: mantis.urdf.xacro
mantis_description/urdf/include/: addon_macro.urdf.xacro  common_macros.urdf.xacro  common_sensors.xacro  mantis_caster_macro.urdf.xacro  robot.gazebo.xacro
mantis_gazebo/: CMakeLists.txt  package.xml
mantis_gazebo/launch/: mantis.launch  mantis_base.launch  mantis_view.launch
mantis_mbf/: CMakeLists.txt  package.xml
mantis_mbf/launch/: amcl_demo.launch  rviz.launch
mantis_mbf/launch/includes/: move_base.launch.xml
mantis_mbf/rviz/: mantis_mbf.rviz
mantis_msgs/: CMakeLists.txt  package.xml
mantis_navigation/: CMakeLists.txt  package.xml
mantis_navigation/config/: costmap_common_params.yaml
mantis_navigation/launch/: amcl.launch  mantis.launch  mantis_hw.launch  mantis_navigation.launch  move_base.launch
mantis_navigation/maps/: turtlebot3_world.yaml
mantis_navigation/rviz/: mantis_navigation.rviz
mantis_robot/: CMakeLists.txt  package.xml
mantis_slam/: CMakeLists.txt  package.xml
mantis_slam/launch/: mantis_cartographer.launch  mantis_frontier_exploration.launch  mantis_gmapping.launch  mantis_hector.launch  mantis_karto.launch  mantis_slam.launch
mantis_slam/rviz/: mantis_cartographer.rviz  mantis_frontier_exploration.rviz  mantis_gmapping.rviz  mantis_karto.rviz
