<?xml version="1.0"?>
<package format="2">
  <name>mantis_description</name>
  <version>1.1.0</version>
  <description>The mantis_description package</description>

  <maintainer email="21bme012@nith.ac.in">Aakash</maintainer>
  <license>BSDv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>

  </export>
</package>
