<?xml version="1.0"?>
<package format="2">
  <name>mantis_mbf</name>
  <version>1.1.0</version>
  <description>The mantis_mbf package</description>


  <maintainer email="21bme012@nith.ac.in">Aakash</maintainer>
  <license>BSDv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
